# universal_dimensions

./: .env  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: demo.ipynb  figures.ipynb
scripts/: cache_betas.py  cache_model_features.py  compute_score.py  download_demo_cache.py  summarize_results.py
src/lib/analyses/: brain_reliability.py  brain_similarity.py  pc_umap.py  rsa.py  target_pca_model.py  universality_index.py  yield_models.py
src/lib/computation/: _pca.py
src/lib/datasets/: __init__.py  _definition.py  _loader.py
src/lib/datasets/allen2021_natural_scenes/: __init__.py  _baguette.py  _dataset.py
src/lib/datasets/russakovsky2014_imagenet/: __init__.py  _dataset.py
src/lib/models/: __init__.py  _definition.py  _loader.py  model_layers.csv
src/lib/scorers/: __init__.py  _definition.py  _plssvd.py  _regression.py
src/lib/utils/: __init__.py  _hash.py  _paths.py  binning.py
